# human2skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  GOVERNANCE.md  INSTALL.md  Makefile  README.en.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
demo/: index.html
docs/: GOVERNANCE.md  README.md  demo-animation.html  roadmap.md
docs/design/: adaptive-interview.md  evidence-model.md  human2skill-architecture.md  human2skill-product-spec.md  profile-presets.md  quality-review.md
docs/plans/: README.md  product-roadmap.md
docs/research/: reference-repo-review.md
examples/colleague-li-ming/: person.meta.json
examples/self-future-me/: person.meta.json
exports/claude-code/: README.md  SKILL.md
exports/openclaw/: README.md  SKILL.md
human2skill-meta/: README.md  SKILL.md
schemas/: evidence_pack.schema.json  person.meta.schema.json  source_index.schema.json
scripts/: generate_examples.py  quality_check.py
src/human2skill/: __init__.py  cli.py  constants.py  distillation.py  (+14 more)
src/human2skill.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_distillation.py  test_end_to_end_p0_p2.py  test_evidence.py  test_evidence_builder.py  test_examples.py  test_expanded_schemas.py  test_exporter.py  test_flow.py  test_generator.py  test_import.py  test_ingest.py  test_installer.py  test_intake.py  test_interview.py  test_meta_skill_docs.py  test_profiles.py  test_reviewer.py  test_scenario.py  test_schema_helpers.py  test_schemas.py  test_smoke_flow.py  test_storage.py  test_update_flow.py
zg-strategy-distillation/: GOVERNANCE.md  SKILL.md
(+46 files in other folders)
