[project]
name = "human2skill"
version = "0.1.0"
description = "Distill private human perspectives into reusable skills"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
